--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "19.1.0",
     "react-native": "^0.81.1",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.4.2"
   },
