--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -5,7 +5,7 @@
     <key>method</key>
     <string>app-store</string>
     <key>teamID</key>
-    <string>YOUR_TEAM_ID</string>
+    <string>U29X6X4X84</string>
     <key>uploadBitcode</key>
     <false/>
     <key>uploadSymbols</key>
