--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -27,7 +27,9 @@ jobs:
     - name: Install CocoaPods
       run: |
         sudo gem install cocoapods
-        cd ios && pod install
+        cd ios
+        pod repo update
+        pod install --verbose --no-repo-update
         
     - name: Build iOS app
       run: |
