--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -31,9 +31,9 @@ jobs:
       
     - name: Install Bundler & CocoaPods
       run: |
-        gem install bundler
         cd ios
-        bundle install
+        gem install bundler
+        bundle install --verbose
         bundle exec pod repo update
         bundle exec pod install --verbose --no-repo-update
         
