Add Gemfile.lock and improve bundler error handling
- Add Gemfile.lock for consistent gem versions
- Add bundle update step to resolve dependencies
- Add echo statements for better debugging
- Fix bundler dependency resolution issues

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -32,9 +32,15 @@ jobs:
     - name: Install Bundler & CocoaPods
       run: |
         cd ios
+        echo "Installing bundler..."
         gem install bundler
+        echo "Installing gems..."
         bundle install --verbose
+        echo "Updating gems..."
+        bundle update
+        echo "Updating pod repo..."
         bundle exec pod repo update
+        echo "Installing pods..."
         bundle exec pod install --verbose --no-repo-update
         
     - name: Build iOS app
