Fix RubyGems and bundler dependency issues
- Add RubyGems update step before bundle install
- Remove old Gemfile.lock to avoid version conflicts
- Specify Ruby version 3.2.0 in Gemfile
- Simplify bundler process by removing bundle update
- Fix dependency resolution issues

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -30,13 +30,16 @@ jobs:
     - name: Install dependencies
       run: npm install
       
+    - name: Update RubyGems
+      run: gem update --system
+      
     - name: Install Bundler & CocoaPods
       run: |
         cd ios
+        echo "Removing old Gemfile.lock to avoid conflicts..."
+        rm -f Gemfile.lock
         echo "Installing gems with bundler..."
         bundle install --verbose
-        echo "Updating gems..."
-        bundle update
         echo "Updating pod repo..."
         bundle exec pod repo update
         echo "Installing pods..."
