Fix Bundler version mismatch (2.5.21)
- Update Gemfile to use bundler ~> 2.5.21
- Explicitly install bundler 2.5.21 after RubyGems update
- Use specific bundler version in all bundle commands
- Resolve RubyGems/Bundler version conflict
- Fix exit code 18 bundler error

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -33,17 +33,20 @@ jobs:
     - name: Update RubyGems
       run: gem update --system
       
+    - name: Install Bundler 2.5.21
+      run: gem install bundler -v 2.5.21
+      
     - name: Install Bundler & CocoaPods
       run: |
         cd ios
         echo "Removing old Gemfile.lock to avoid conflicts..."
         rm -f Gemfile.lock
-        echo "Installing gems with bundler..."
-        bundle install --verbose
+        echo "Installing gems with bundler 2.5.21..."
+        bundle _2.5.21_ install --verbose
         echo "Updating pod repo..."
-        bundle exec pod repo update
+        bundle _2.5.21_ exec pod repo update
         echo "Installing pods..."
-        bundle exec pod install --verbose --no-repo-update
+        bundle _2.5.21_ exec pod install --verbose --no-repo-update
         
     - name: Build iOS app
       run: |
