--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -25,19 +25,10 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 3.2
-        bundler-cache: false
+        bundler-cache: true
         
     - name: Install dependencies
       run: npm install
-      
-    - name: Update RubyGems
-      run: gem update --system
-      
-    - name: Clean old bundler environments
-      run: gem uninstall bundler -aIx || true
-      
-    - name: Install Bundler 2.5.21
-      run: gem install bundler -v 2.5.21
       
     - name: Install Bundler & CocoaPods
       run: |
@@ -45,13 +36,13 @@ jobs:
         echo "Checking Ruby version..."
         ruby --version
         echo "Checking bundler version..."
-        bundle _2.5.21_ --version
-        echo "Installing gems with bundler 2.5.21..."
-        bundle _2.5.21_ install --verbose
+        bundle --version
+        echo "Installing gems with bundler..."
+        bundle install --verbose
         echo "Updating pod repo..."
-        bundle _2.5.21_ exec pod repo update
+        bundle exec pod repo update
         echo "Installing pods..."
-        bundle _2.5.21_ exec pod install --verbose --no-repo-update
+        bundle exec pod install --verbose --no-repo-update
         
     - name: Build iOS app
       run: |
