--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -22,13 +22,13 @@ jobs:
         cache: 'npm'
         
     - name: Select Xcode
-      run: sudo xcode-select -s /Applications/Xcode_15.0.app/Contents/Developer
+      run: sudo xcode-select -s /Applications/Xcode_15.4.app/Contents/Developer
       
-    - name: Set up Ruby 3.2
+    - name: Set up Ruby 2.7
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.2'
-        bundler: '2.5.21'
+        ruby-version: '2.7'
+        bundler: '2.3.26'
         bundler-cache: true
         
     - name: Install dependencies
@@ -62,20 +62,12 @@ jobs:
         xcodebuild -workspace LabubuUniverse.xcworkspace \
                    -scheme LabubuUniverse \
                    -configuration Release \
-                   -destination generic/platform=iOS \
-                   -archivePath LabubuUniverse.xcarchive \
-                   archive
+                   -sdk iphonesimulator \
+                   -destination 'platform=iOS Simulator,name=iPhone 15' \
+                   clean build
                    
-    - name: Export IPA
-      run: |
-        cd ios
-        xcodebuild -exportArchive \
-                   -archivePath LabubuUniverse.xcarchive \
-                   -exportPath ./build \
-                   -exportOptionsPlist ExportOptions.plist
-                   
-    - name: Upload IPA artifact
+    - name: Upload iOS Build
       uses: actions/upload-artifact@v4
       with:
         name: LabubuUniverse-iOS
-        path: ios/build/*.ipa
+        path: ios/build/
