--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -21,8 +21,10 @@ jobs:
         node-version: '18'
         cache: 'npm'
         
-    - name: Select Xcode
-      run: sudo xcode-select -s /Applications/Xcode_15.4.app/Contents/Developer
+    - name: Set up Xcode
+      uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '15.3'
       
     - name: Set up Ruby 2.7
       uses: ruby/setup-ruby@v1
