--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-native/new-app-screen": "0.80.1",
     "firebase": "^11.10.0",
     "react": "19.1.0",
-    "react-native": "^0.81.1",
+    "react-native": "0.81.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
